--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -16,7 +16,7 @@
         android:text="MAKE YOUR ACCOUNT"
         android:gravity="center"
         android:textStyle="bold"
-        android:textSize="20sp"/>
+        android:textSize="24dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -61,9 +61,9 @@
         android:layout_marginTop="16dp">
         <ImageView
             android:id="@+id/ivPassword"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:src="@drawable/baseline_admin_panel_settings_24" />
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:src="@drawable/baseline_app_blocking_24" />
         <EditText
             android:id="@+id/etPassword"
             android:layout_width="match_parent"
