--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,14 +13,16 @@
         android:id="@+id/tvnama"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
+        android:textSize="24sp"
+        android:textStyle="bold"
         android:text=""/>
 
     <TextView
         android:id="@+id/tvusername"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
+        android:textSize="24sp"
+        android:textStyle="bold"
         android:text=""/>
 
 </LinearLayout>
