--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,10 +13,10 @@
         android:id="@+id/tvPleaseLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="PLEASE LOGIN"
+        android:text="@string/please_login"
         android:textStyle="bold"
         android:gravity="center"
-        android:textSize="24dp"/>
+        android:textSize="24sp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -32,8 +32,8 @@
             android:id="@+id/etUsername"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:textSize="16dp"
-            android:hint="Username" />
+            android:textSize="16sp"
+            android:hint="@string/username" />
     </LinearLayout>
 
     <LinearLayout
@@ -51,7 +51,7 @@
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:inputType="textPassword"
-            android:hint="Password" />
+            android:hint="@string/password" />
     </LinearLayout>
 
     <Button
@@ -61,15 +61,15 @@
         android:layout_gravity="center"
         android:textAlignment="center"
         android:layout_marginTop="16dp"
-        android:text="LOGIN"/>
+        android:text="@string/login"/>
 
     <TextView
         android:id="@+id/tvCreateAcc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="16dp"
+        android:textSize="16sp"
         android:gravity="center"
         android:layout_marginTop="16dp"
-        android:text="Create Your Account"/>
+        android:text="@string/create_your_account"/>
 
 </LinearLayout>
